# ofxCodeEditor

./: README.md
cmake/: CMakeLists.txt
example/: main.mm  testApp.cpp  testApp.h
src/: ofxCodeEditor.h  ofxCodeEditor.mm
src/scintilla/cocoa/: ScintillaCocoa.mm  ScintillaView.h  ScintillaView.mm
src/scintilla/include/: PlatCocoa.mm  SciLexer.h  Scintilla.iface
src/scintilla/lexers/: LexAntescofo.cxx
src/scintilla/src/: Catalogue.cxx  ScintillaBase.cxx
